--- a/src/components/HomePage/HomePage.module.css
+++ b/src/components/HomePage/HomePage.module.css
@@ -8,16 +8,10 @@
   max-width: 1920px;
   margin: 0 auto;
 
-  @media (max-width: 600px) or (min-width: 1920px) {
+  @media (max-width: 800px) or (min-width: 1920px) {
     gap: var(--default-padding);
     padding: 0 var(--default-padding);
   }
-}
-
-.workList {
-  list-style: none;
-  padding: 0; 
-  width: 100%;
 }
 
 .homeSection {
